Change Log for OpenXava project
===============================

- Fix: Visual defect in links for changing mode.
- Fix: Help link too close to mode links.
- Fix: Style for selected row hides the line separator.
- Fix: Totals in element collections are not recalculated after removing a row.
- Fix: After removing a line from an element collection events and calculated properties does not work in the collection. 
- Fix: Reloading page after removing a line from an element collection leaves a blank line.
- Some new common use labels to be used in applications.

OpenXava 5.1 (2014-10-21)
-------------------------
- @NoSearch supported for references in embeddable classes of element collections.
- @ReadOnly and @EditOnly supported for @ElementCollection.
- @OnChangeSearch supported for references in embeddable classes of element collections.
- @OnChange supported in embeddable classes of element collections.
- @SearchListCondition supported for references in embeddable classes of element collections.
- @SearchAction supported for references in embeddable classes of element collections.
- Search action for references available in element collections.
- Support for @DescriptionsList references in element collections, including dependent ones. 
- @DefaultValueCalculator support in @ElementCollection.
- Improving AJAX behavior for element collection, with x10 improvement in responsiveness.
- Reference data fetching in element collections optimized.
- Searching references by @SearchKey properties in element collections.
- New stereotype FILES for attaching several files to an entity.
- @DefaultValueCalculator is executed each time that the properties in @PropertyValue(from) change.
- Look and feel for totals in lists and collections improved.
- Java 8 support.
- FirstSteps content changed.
- French messages improved.
- Showing messages in log for annotation misuse in element collection.